# firestore-streaming-test-rs

./: Cargo.toml  README.md
src/: auth.rs  main.rs
