[package]
name = "firestore-test"
version = "0.1.0"
edition = "2018"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
anyhow = "1.0.43"
dotenv = "0.15.0"
env_logger = "0.9.0"
firestore_grpc = "0.31.0"
futures = "0.3.17"
jsonwebtoken = "7.2.0"
log = "0.4.14"
reqwest = { version = "^0.11", features = ["json", "stream", "blocking"] }
serde = { version = "1.0.130", features = ["derive"] }
serde_json = "1.0.68"
tokio = { version = "0.2", features = ["full"] }
